--- a/shotput-tracker.vcxproj
+++ b/shotput-tracker.vcxproj
@@ -76,9 +76,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(OPENCV_PATH)/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -87,9 +89,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(OPENCV_PATH)/include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
+      <AdditionalDependencies>$(OPENCV_PATH)/x64/vc15/lib/opencv_calib3d420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_core420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_dnn420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_features2d420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_flann420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_gapi420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_highgui420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_imgcodecs420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_imgproc420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_ml420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_objdetect420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_photo420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_stitching420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_video420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_videoio420d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -123,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\tracker.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
