--- a/shotput-tracker.vcxproj
+++ b/shotput-tracker.vcxproj
@@ -69,7 +69,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <ExecutablePath>$(ExecutablePath)</ExecutablePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -93,8 +95,12 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>$(OPENCV_PATH)/x64/vc15/lib/opencv_calib3d420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_core420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_dnn420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_features2d420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_flann420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_gapi420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_highgui420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_imgcodecs420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_imgproc420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_ml420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_objdetect420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_photo420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_stitching420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_video420d.lib;$(OPENCV_PATH)/x64/vc15/lib/opencv_videoio420d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(OPENCV_PATH)/x64/vc15/lib/opencv_world420.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <ProjectReference />
+    <ProjectReference>
+      <UseLibraryDependencyInputs>true</UseLibraryDependencyInputs>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -119,11 +125,13 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(OPENCV_PATH)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>$(OPENCV_PATH)\x64\vc15\lib\opencv_world420.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
