--- a/shotput-tracker.vcxproj
+++ b/shotput-tracker.vcxproj
@@ -142,10 +142,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\tracker.cpp" />
+    <ClCompile Include="src\app.cpp" />
     <ClCompile Include="src\ui.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\app.hpp" />
     <ClInclude Include="include\ui.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
