Added resizing to image pre-processing

--- a/shotput-tracker.vcxproj
+++ b/shotput-tracker.vcxproj
@@ -144,6 +144,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\constants.hpp" />
     <ClInclude Include="include\fileui.hpp" />
     <ClInclude Include="include\tracker.hpp" />
     <ClInclude Include="include\videoview.hpp">
